<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pet_image"
        android:layout_width="303dp"
        android:layout_height="280dp"
        android:layout_marginTop="52dp"
        app:layout_constraintBottom_toTopOf="@+id/play_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/pet_image"
        android:contentDescription="@string/petImage" />

    <Button
        android:id="@+id/clean_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:width="120dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/clean_pet"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/hungry_textView"
        app:layout_constraintEnd_toStartOf="@+id/play_Btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/feed_Btn" />

    <Button
        android:id="@+id/feed_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:width="120dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/feed"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/hungry_textView"
        app:layout_constraintEnd_toStartOf="@+id/clean_Btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/play_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:width="120dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/play"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/hungry_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clean_Btn" />

    <TextView
        android:id="@+id/hungry_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/hunger"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/clean_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/happy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/happy"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/clean_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/clean"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/happy_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/hungry_edit_txt"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/clean_edit_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toEndOf="@+id/hungry_textView" />

    <EditText
        android:id="@+id/clean_edit_txt"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/happy_edit_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toEndOf="@+id/clean_textView" />

    <EditText
        android:id="@+id/happy_edit_txt"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toEndOf="@+id/happy_textView"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>